--- a/unicafe/package.json
+++ b/unicafe/package.json
@@ -11,6 +11,9 @@
   },
   "devDependencies": {
     "@vitejs/plugin-react-refresh": "^1.3.1",
+    "autoprefixer": "^10.2.6",
+    "postcss": "^8.3.5",
+    "tailwindcss": "^2.2.4",
     "vite": "^2.3.8"
   }
 }
